# forecasting-demanda-electrica

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-models.txt  requirements.txt
.github/workflows/: daily.yml  tests.yml  weekly.yml
dashboard/: app.py
data/: demand_history.parquet  predictions.parquet
docs/superpowers/plans/: 2026-06-15-fundacion-de-datos.md  2026-06-18-modelos.md  2026-06-18-orquestacion-backtest.md  2026-06-19-dashboard-cicd.md
docs/superpowers/specs/: 2026-06-15-forecasting-demanda-electrica-design.md
notebooks/: walkthrough.ipynb
src/forecasting/: backtest.py  bootstrap.py  config.py  forecast_daily.py  ingest.py  metrics.py  predictions.py  run_daily.py  series.py  store.py  views.py
src/forecasting/models/: __init__.py  base.py  chronos_model.py  lightgbm_model.py  naive.py  sarimax.py
tests/: conftest.py  test_backtest.py  test_bootstrap.py  test_chronos.py  test_dashboard.py  test_forecast_daily.py  test_ingest.py  test_lightgbm.py  test_metrics.py  test_model_registry.py  test_naive.py  test_predictions.py  test_run_daily.py  test_sarimax.py  test_series.py  test_store.py  test_views.py  test_workflows.py
